syntax = "proto3";

service CentralServer {
  rpc ReceiveData (PollutionData) returns (ReportResponse) {}
}

message PollutionData {
  float pollution_level = 1;
  string location = 2;
}

message ReportResponse {
  string message = 1;
}
