syntax = "proto3";

service WaterPollutionSensor {
  rpc ReportPollution (PollutionData) returns (ReportResponse) {}
}

message PollutionData {
  float pollution_level = 1;
  string location = 2;
}

message ReportResponse {
  string message = 1;
}
